--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Lauren Witek
 description: Blog for ST558
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars1.githubusercontent.com/u/65319391?s=400&u=c2c3054ccd77ee1b8f09b909f77b063d1362c156&v=4
+avatar: https://row.githubusercontent.com/lcwitek/lcwitek.github.io/master/images/Chris and I.jpg
 
 #
 # Flags below are optional
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: lcwitek/whovianstats
+  github: lcwitek/lcwitek.github.io
   instagram:
   linkedin:
   pinterest:
