--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ avatar: https://row.githubusercontent.com/lcwitek/lcwitek.github.io/master/image
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: lcbruyni@ncsu.edu
   facebook:
   flickr:
-  github: lcwitek/lcwitek.github.io
+  github: 
   instagram:
   linkedin:
   pinterest:
