--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Lauren Witek
 description: Blog for ST558
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://row.githubusercontent.com/lcwitek/lcwitek.github.io/master/images/Chris and I.jpg
+avatar: https://raw.githubusercontent.com/lcwitek/lcwitek.github.io/master/images/Chris and I.jpg
 
 #
 # Flags below are optional
